<resources>
    <string name="about">About</string>
    <string name="action_view_error">Couldn\'t start the application</string>
    <string name="album">Album</string>
    <string name="app_name">Audire</string>
    <string name="artist">Artist</string>
    <string name="bottom_navigation_view_history">History</string>
    <string name="bottom_navigation_view_identify">Identify</string>
    <string name="cover_art">Cover</string>
    <string name="developer">Developer</string>
    <string name="developer_github">Follow on GitHub</string>
    <string name="developer_name">Hitesh Kumar Saini</string>
    <string name="developer_x">Follow on X</string>
    <string name="find_music_qs_tile">Find music</string>
    <string name="github">GitHub</string>
    <string name="identify_error">Could not identify. Retry?</string>
    <string name="identify_error_alert_dialog_title">:(</string>
    <string name="identify_error_details">Details</string>
    <string name="identify_record">Record</string>
    <string name="identify_record_permission_alert_dialog_not_available_message">The application cannot access your microphone to record the audio. Provide access to android.permission.RECORD_AUDIO permission.</string>
    <string name="identify_record_permission_alert_dialog_not_available_title">Insufficient permissions</string>
    <string name="identify_stop">Stop</string>
    <string name="label">Label</string>
    <string name="license">License</string>
    <string name="liked">Liked</string>
    <string name="lyrics">Lyrics</string>
    <string name="no">No</string>
    <string name="no_history_message">Your history will be displayed here</string>
    <string name="no_search_results">Nothing like that was found</string>
    <string name="ok">OK</string>
    <string name="privacy">Privacy</string>
    <string name="remove_history_item_message">Do you want to remove \"%1$s\" from the history?</string>
    <string name="remove_history_item_title">Remove</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_appearance_system_color_scheme">System color scheme</string>
    <string name="settings_appearance_theme">Theme</string>
    <string name="settings_appearance_theme_dark">Dark</string>
    <string name="settings_appearance_theme_light">Light</string>
    <string name="settings_appearance_theme_system">System</string>
    <string name="settings_application_restart_required">Application restart is required</string>
    <string name="settings_backup">Backup</string>
    <string name="settings_backup_export">Export history</string>
    <string name="settings_backup_export_fail">Export failed</string>
    <string name="settings_backup_export_success">Export successful</string>
    <string name="settings_backup_export_supporting_text">Backup history to JSON file</string>
    <string name="settings_backup_file_mime" translatable="false">application/json</string>
    <string name="settings_backup_file_name">History</string>
    <string name="settings_backup_import">Import history</string>
    <string name="settings_backup_import_fail">Import failed</string>
    <string name="settings_backup_import_success">Import successful</string>
    <string name="settings_backup_import_supporting_text">Restore history from JSON file</string>
    <string name="settings_behavior">Behavior</string>
    <string name="settings_behavior_auto_start">Identify on app launch</string>
    <string name="spotify">Spotify</string>
    <string name="year">Year</string>
    <string name="yes">Yes</string>
    <string name="youtube">YouTube</string>
    <string name="share">Share</string>
</resources>
