<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:contentScrim="@color/transparent"
            app:expandedTitleTextAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                android:elevation="0dp"
                app:title="@string/settings">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/settingsScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="true"
        android:paddingVertical="32dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/settings_appearance"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="?attr/colorPrimary" />

            <LinearLayout
                android:id="@+id/settingsAppearanceThemeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:orientation="horizontal">

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_appearance_theme"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="?attr/colorOnSurface" />

                    <TextView
                        android:id="@+id/settingsAppearanceThemeSupportingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textColor="?attr/colorOnSurfaceVariant" />
                </LinearLayout>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <View
                    android:id="@+id/settingsAppearanceThemePopupMenuAnchor"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingsAppearanceSystemColorSchemeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:orientation="horizontal">

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_appearance_system_color_scheme"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/settingsAppearanceSystemColorSchemeMaterialSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="true"
                    android:focusable="true" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/settings_backup"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="?attr/colorPrimary" />

            <LinearLayout
                android:id="@+id/settingsBackupExportLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:orientation="horizontal">

                <Space
                    android:layout_width="24dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_file_upload_24"
                    app:tint="?attr/colorOnSurfaceVariant" />

                <Space
                    android:layout_width="24dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_backup_export"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="?attr/colorOnSurface" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_backup_export_supporting_text"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textColor="?attr/colorOnSurfaceVariant" />
                </LinearLayout>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingsBackupImportLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:orientation="horizontal">

                <Space
                    android:layout_width="24dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_file_download_24"
                    app:tint="?attr/colorOnSurfaceVariant" />

                <Space
                    android:layout_width="24dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_backup_import"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="?attr/colorOnSurface" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_backup_import_supporting_text"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textColor="?attr/colorOnSurfaceVariant" />
                </LinearLayout>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>