<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@+id/aboutScrollView">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/about"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/aboutScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="96dp"
                                android:layout_height="96dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/ic_launcher_background" />

                            <ImageView
                                android:layout_width="96dp"
                                android:layout_height="96dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/ic_launcher_foreground" />
                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/titleTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_name"
                                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

                            <TextView
                                android:id="@+id/descriptionTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="wrap_content"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:id="@+id/githubLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="72dp"
                            android:layout_height="56dp"
                            android:importantForAccessibility="no"
                            android:padding="16dp"
                            android:src="@drawable/github"
                            app:tint="?attr/colorOnSurfaceVariant" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/github"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/licenseLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="72dp"
                            android:layout_height="56dp"
                            android:importantForAccessibility="no"
                            android:padding="16dp"
                            android:src="@drawable/outline_description_24"
                            app:tint="?attr/colorOnSurfaceVariant" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/license"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/privacyLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="72dp"
                            android:layout_height="56dp"
                            android:importantForAccessibility="no"
                            android:padding="16dp"
                            android:src="@drawable/outline_lock_24"
                            app:tint="?attr/colorOnSurfaceVariant" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/privacy"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="start|center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="24dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/developer"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="72dp"
                            android:layout_height="56dp"
                            android:importantForAccessibility="no"
                            android:padding="16dp"
                            android:src="@drawable/outline_person_24"
                            app:tint="?attr/colorOnSurfaceVariant" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/developer_name"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/developerGitHubLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="72dp"
                            android:layout_height="56dp"
                            android:importantForAccessibility="no"
                            android:padding="16dp"
                            android:src="@drawable/github"
                            app:tint="?attr/colorOnSurfaceVariant" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/developer_github"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/developerXLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="72dp"
                            android:layout_height="56dp"
                            android:importantForAccessibility="no"
                            android:padding="16dp"
                            android:src="@drawable/x"
                            app:tint="?attr/colorOnSurfaceVariant" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/developer_x"
                                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

